--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A HTML video player with basic functionalities",
   "main": "index.js",
   "scripts": {
-    "tsc": "tsc -w",
+    "tsc": "tsc",
+    "tsc:watch": "tsc -w",
     "test": "jest"
   },
   "repository": "git@github.com:Showrin/video-player.git",
